# talks

./: .gitmodules  README.md
1408/cabal/: index.html
1408/cabal/css/theme/: sky.css
1411/ffi/: Demo.hs  LICENSE  Makefile  atx-haskell-ffi.cabal  ffi.html  ffi.markdown
1411/ffi/cbits/: demo.c
